--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <button class="reset">Стереть все</button>
+    <input type="color" class="color-picker">
   <div class="field">
     <div class="cell red"></div>
     <div class="cell red"></div>
